--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,5 @@
 h2{font-weight: bold;}
+h3{font-weight: bold;}
 h4{font-weight: bold;}
 body::before{background: none;}
 .hljs{background-color: var(--light);}
