--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
-h2{font-weight: bold;}
-h3{font-weight: bold;}
-h4{font-weight: bold;}
+h2{font-weight: normal;}
+h3{font-weight: normal;}
+h4{font-weight: normal;}
 body::before{background: none;}
 .hljs{background-color: var(--light);}
